--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                                          regardless of location or socioeconomic status,empowering individuals to take charge of their health
                                     </p>
                                     <div class="carousel-caption-1-content-btn fadeInLeft animated" data-animation="fadeInLeft" data-delay="1.7s" style="animation-delay: 1.7s;">
-                                        <a class="btn btn-primary rounded-pill flex-shrink-0 py-3 px-5 me-2" href="#"> Digital Doctor </a>
-                                        <a class="btn btn-secondary rounded-pill flex-shrink-0 py-3 px-5 ms-2" href="#"> Book Appointment</a>
+                                        <a class="btn btn-primary rounded-pill flex-shrink-0 py-3 px-5 me-2" href="https://gigx267.github.io/Better-Health-Nigeria-/Aidoctor.html "> AI Wellness </a>
+                                        <a class="btn btn-secondary rounded-pill flex-shrink-0 py-3 px-5 ms-2" href="https://gigx267.github.io/Better-Health-Nigeria-/service.html "> Book Appointment</a>
                                     </div>
                                 </div>
                             </div>
